# bartok

./: .gitignore  ARCHITECTURE.md  DEMO.md  README.md  serve.sh  stitch.sh  tunnel.sh
.github/workflows/: tests.yml
guardian/: .env.example  run.sh
miden-settlement/: README.md  install.sh
miden-settlement/contract/: Cargo.toml
miden-settlement/contract/src/: lib.rs
miden-settlement/tests/: settlement_split_test.rs
miden/contracts/settlement-note/: Cargo.toml  miden-project.toml
miden/contracts/settlement-note/src/: lib.rs
miden/integration/: Cargo.toml
miden/integration/src/: helpers.rs
miden/integration/tests/: settlement_split_test.rs
scripts/: deploy-vps.sh  vps-bootstrap.sh
tasks/: lessons.md  todo.md  ux-notes.md
ux-prototype/: bartok.css  index.html  package-lock.json  package.json  seller.html  server.js  vercel.json  vite.config.ts  wallet-smoke.html
ux-prototype/public/: how-it-works.html
ux-prototype/src/: format.js  wallet.js
ux-prototype/test/: format.test.mjs  server.test.mjs
zktls-spike/: .env.example  .gitignore  ARCHITECTURE.md  RESULTS.md  setup.sh  test-zktls.sh
zktls-spike/openrouter-example/: README.md  keygen.rs  oracle.rs  present.rs  prove.rs  verify.rs
